# abitobot

./: CMakeLists.txt  README.md  package.xml
config/: abitobot_bridge.yaml  abitobot_controllers.yaml
launch/: robot_controllers.launch.py  robot_gazebo.launch.py  robot_state_publisher.launch.py
meshes/dae/: Cube.dae  arm_1.dae  arm_2.dae  base_arm.dae  gripper.dae  gripper_left.dae  gripper_right.dae  leg_left_back.dae  leg_left_front.dae  leg_right_back.dae  leg_right_front.dae  wheel_left_back.dae  wheel_left_front.dae  wheel_right_back.dae  wheel_right_front.dae
others/: export_bag.py  joint_states.csv  plot.py  test.py  tf_tree.gv
robots/: robot.urdf.xacro
rosbag/: metadata.yaml  rosbag2_2025_05_09-18_01_02_0.mcap
rviz/: robot.rviz
urdf/: robot.urdf  ros2_control.urdf.xacro
urdf/arm/: gripper.urdf.xacro  scara.urdf.xacro
urdf/base/: robot_base.urdf.xacro
urdf/sensors/: camera.urdf.xacro  imu.urdf.xacro
urdf/utils/: utils.urdf.xacro
urdf/wheels/: robot_wheel.urdf.xacro
